<resources>
    <string name="app_name">ShoeStore</string>
    <string name="username">Email</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>=
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="to_shoe_store">to shoe store</string>
    <string name="instruction">Instruction</string>
    <string name="_1_see_show_list_n2_add_shoe">1. See Show list\n2. Add Shoe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="buy_now">buy now</string>
    <string name="name">Name :</string>
    <string name="shoe_size">Shoe size :</string>
    <string name="description">Description :</string>
    <string name="company">Company :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="add_shoe">Add Shoe</string>
</resources>
